Add vite middleware to forward dev server
- quasar app not loading in dev for some reason (even through vite directly)
- remove build assets

--- a/Quasar.AspNetCore/Quasar.AspNetCore.csproj
+++ b/Quasar.AspNetCore/Quasar.AspNetCore.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Vite.AspNetCore" Version="1.10.0" />
+    </ItemGroup>
+
 </Project>
