--- a/Quasar.AspNetCore/Quasar.AspNetCore.csproj
+++ b/Quasar.AspNetCore/Quasar.AspNetCore.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+      <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.2" />
       <PackageReference Include="Vite.AspNetCore" Version="1.10.0" />
     </ItemGroup>
 
