Added vue page and routes for 404/403 and authentication to asp.net

--- a/Quasar.AspNetCore/appsettings.json
+++ b/Quasar.AspNetCore/appsettings.json
@@ -1,3 +1,7 @@
 {
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "dev-brqa71hj.auth0.com",
+    "ClientId": "swveETxt6VHtMij3eIM8w3Fvbo5Au3Lv"
+  }
 }
